--- a/nil_back_end/package.json
+++ b/nil_back_end/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "setup": "node scripts/setup.js",
     "wallet-setup": "node scripts/wallet-setup.js",
+    "fix-path": "bash scripts/fix-path.sh",
     "compile": "hardhat compile",
     "test": "hardhat test",
     "deploy": "hardhat run scripts/deploy.ts --network nil_testnet",
